--- a/clklog_devops/docker-compose-clklog-minimal-base.yml
+++ b/clklog_devops/docker-compose-clklog-minimal-base.yml
@@ -53,10 +53,13 @@ services:
       timeout: 5s
       retries: 3
 
-  # Zookeeper - Kafka 依赖
+
+
+  # =======================
+  # Zookeeper 服务
+  # =======================
   zookeeper:
     image: registry.cn-shanghai.aliyuncs.com/clklog/bitnami_zookeeper:3.9.2
-    user: root
     ports:
       - "2181:2181"
     environment:
@@ -66,33 +69,27 @@ services:
       - ./clklog_dc_data/zookeeper:/bitnami/zookeeper
     networks:
       - backend
-    entrypoint:
-      - /bin/bash
-      - -c
-      - |
-        chown -R 1001:1001 /bitnami/zookeeper
-        /opt/bitnami/scripts/zookeeper/entrypoint.sh /opt/bitnami/scripts/zookeeper/run.sh
     healthcheck:
-      test: 'nc -z localhost 2181'
+      test: ["CMD", "nc", "-z", "localhost", "2181"]
       interval: 10s
       timeout: 5s
       retries: 3
 
-  # Kafka - 消息队列
+  # =======================
+  # Kafka 服务
+  # =======================
   kafka:
-    image: &kafka-image registry.cn-shanghai.aliyuncs.com/clklog/bitnami_kafka:3.6.2
-    user: root
-    ports:
-      - "9092:9092"
+    image: registry.cn-shanghai.aliyuncs.com/clklog/bitnami_kafka:3.6.2
     depends_on:
       zookeeper:
         condition: service_healthy
+    ports:
+      - "9092:9092"
     environment:
       - TZ=Asia/Shanghai
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - BITNAMI_KUBERNETES_USE_CONTENT_TRUST=false
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
       - ALLOW_PLAINTEXT_LISTENER=yes
     volumes:
       - ./clklog_dc_data/kafka:/bitnami/kafka
@@ -103,23 +100,24 @@ services:
       start_period: 30s
       interval: 10s
       retries: 5
-    entrypoint:
-      - /bin/bash
-      - -c
-      - |
-        chown -R 1001:1001 /bitnami/kafka
-        /opt/bitnami/scripts/kafka/entrypoint.sh /opt/bitnami/scripts/kafka/run.sh
 
+  # =======================
   # 初始化 Kafka Topic
+  # =======================
   init-kafka:
-    image: *kafka-image
-    working_dir: /opt/bitnami/kafka/bin
-    entrypoint: /bin/bash
+    image: registry.cn-shanghai.aliyuncs.com/clklog/bitnami_kafka:3.6.2
     depends_on:
       kafka:
         condition: service_healthy
-    command: |
-      kafka-topics.sh --create --if-not-exists --topic clklog --replication-factor=1 --partitions=6 --bootstrap-server kafka:9092
+    working_dir: /opt/bitnami/kafka/bin
+    command: >
+      bash -c "
+      kafka-topics.sh --create --if-not-exists \
+        --topic clklog \
+        --partitions 6 \
+        --replication-factor 1 \
+        --bootstrap-server kafka:9092
+      "
     networks:
       - backend
 
